Actualitza metode ClearScreen()